force-app/main/default/objects/Account_Shopify__c/Account_Shopify__c.object-meta.xml
<CustomObject>
    <description>Stores the account&apos;s shopify info on a pure store basis</description>
    <label>Account Shopify</label>
    <nameField>
        <displayFormat>SID-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Shopify</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>