force-app/main/default/objects/Account_Shopify__c/fields/Shop_Url__c.field-meta.xml
<CustomField>
    <fullName>Shop_Url__c</fullName>
    <description>Shopify Store URL</description>
    <label>Shop Url</label>
    <type>Url</type>
</CustomField>