force-app/main/default/objects/Account_Shopify__c/fields/Shopify_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Customer_Id__c</fullName>
    <description>Shopify Customer External ID</description>
    <externalId>true</externalId>
    <label>Shopify_Customer_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>