force-app/main/default/objects/Account_Shopify__c/fields/Shopify_Store__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Creates a normalized structure for the Shopify Stores</description>
    <label>Shopify Store</label>
    <referenceTo>Shopify__c</referenceTo>
    <relationshipLabel>Account Shopify</relationshipLabel>
    <relationshipName>Account_Shopify</relationshipName>
    <type>Lookup</type>
</CustomField>